--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.6.7",
     "@quasar/extras": "^1.16.5",
+    "js-cookie": "^3.0.5",
     "nuxt-quasar-ui": "^2.0.5",
     "quasar": "^2.12.3",
+    "swiper": "^9.3.1",
     "tailwindcss": "^3.3.3",
     "vuex": "^4.0.2"
   }
